--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -1,5 +1,8 @@
 #heading {
   background: url('../../img/portfoliomain.png') no-repeat;
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
   height: 600px;
   color: white;
   font-family: 'Roboto' !important;
