--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -3,3 +3,9 @@
   background-color: #25232E;
   padding-top: 60px;
 }
+
+.contact-item {
+  border: 2px solid white;
+  margin-left: 20px;
+  margin-right: 20px;
+}
