added media styles for header

--- a/src/components/heading/heading.css
+++ b/src/components/heading/heading.css
@@ -29,5 +29,35 @@
 
 #heading-button {
   padding-left: 300px;
+}
 
+#heading-mobile-text {
+  display: none;
+}
+
+/*media queries*/
+
+@media only screen and (max-width: 667px) {
+  #heading-text, #heading-button {
+    display: none;
+  }
+
+  #heading {
+    height: 200px;
+
+  }
+
+  #heading-mobile-text {
+    display: block;
+    padding-top: 20px;
+    margin-left: 20%;
+  }
+
+  #heading-mobile-text h2 {
+    font-size: 4em;
+  }
+
+  #heading-mobile-text h2:first-of-type {
+    margin-top: 0;
+  }
 }
