background color change

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,8 +1,10 @@
 #contact {
   height: 600px;
-  background-color: #25232E;
+  background-color: rgb(30,30,40)
+;
   padding-top: 60px;
 }
+/*previous bgcolor #25232E*/
 
 .contact-item {
   border: 2px solid #A0DCFF;
