--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,7 +1,7 @@
 #portfolio {
-  height: 600px;
   background-color: rgb(30,30,40);
   padding-top: 60px;
+  padding-bottom: 40px;
 }
 
 .portfolio-img img {
